--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,7 @@ h2 {
   align-items: center;
   justify-content: space-between;
   height: 100%;
+  text-align: center;
 }
 
 .contenedor-modificadores,
@@ -182,12 +183,12 @@ header {
   align-items: center;
   width: 100%;
   height: 75.05px;
-  background-color: #4d82f3;
+  background-color: white;
   cursor: pointer;
-  border: none;
+  border: 1px solid grey;
   border-radius: 10px;
   font-size: 23px;
-  color: white;
+  color: grey;
 }
 
 .resumen {
@@ -232,9 +233,10 @@ header {
 .check {
   width: 119px;
   height: 119px;
+  margin-top: 40px;
 }
 
-.numero-pedido {
+.datos-usuario {
   display: flex;
   text-align: center;
   align-items: center;
@@ -246,4 +248,23 @@ header {
   border-radius: 10px;
   font-size: 23px;
   justify-content: center;
+}
+
+.section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0px;
+  text-align: center;
+  margin-bottom: 15px;
+  width: 100%;
+}
+
+.contenedor-confirmar-cancelar {
+  width: 100%;
+}
+
+.ticket {
+  margin-bottom: 0;
 }
