--- a/menu-producto/src/ElementosCarrito.css
+++ b/menu-producto/src/ElementosCarrito.css
@@ -1,4 +1,4 @@
-.elemento-carrito {
+/* .elemento-carrito {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -55,4 +55,4 @@
   cursor: pointer;
   font-size: 20px;
   color: #ff0000;
-}
+} */
